--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="img.jpeg" alt="Davi" style="width:100%">
         <p class = "h1">DOGLAS PRINCE Davinson</p>
         <p class="title">L3 Informatique M.I.A.G.E</p>
-        <p>Universite Paris-Saclay</p>
+        <p class="univ">Universite Paris-Saclay</p>
         <a href="#"><i class="fa fa-instagram"></i></a> 
         <a href="#"><i class="fa fa-github"></i></a> 
         <a href="#"><i class="fa fa-linkedin"></i></a> 
