--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./style.css" />
     <script defer src="./script.js"></script>
-    <title>Profile_Card</title>
+    <title>ProfileCard</title>
 </head>
 <body class="body">
     <div class="card">
