--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <p class = "h1">DOGLAS PRINCE Davinson</p>
         <p class="title">L3 Informatique M.I.A.G.E</p>
         <p class="univ">Universite Paris-Saclay</p>
-        <a href="#"><i class="fa fa-instagram"></i></a> 
-        <a href="#"><i class="fa fa-github"></i></a> 
-        <a href="#"><i class="fa fa-linkedin"></i></a> 
-        <a href="#"><i class="fa fa-whatsapp"></i></a> 
+        <a1 href="#"><i class="fa fa-instagram"></i></a1> 
+        <a2 href="#"><i class="fa fa-github"></i></a2> 
+        <a3 href="#"><i class="fa fa-linkedin"></i></a3> 
+        <a4 href="#"><i class="fa fa-whatsapp"></i></a4> 
         <p><button>Contact</button></p>
       </div>
 </body>
