--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <title>ProfileCard</title>
 </head>
 <body class="body">
+    <div class="container">
     <div class="card">
-        <img src="img.jpeg" alt="Davi" style="width:100%">
+        <img class="img" src="img.jpeg" alt="Davi" style="width:100%">
         <p class = "h1">DOGLAS PRINCE Davinson</p>
         <p class="title">L3 Informatique M.I.A.G.E</p>
         <p class="univ">Universite Paris-Saclay</p>
@@ -20,6 +21,7 @@
         <a3 href="#"><i class="fa fa-linkedin"></i></a3> 
         <a4 href="#"><i class="fa fa-whatsapp"></i></a4> 
         <p><button>Contact</button></p>
+        </div>
       </div>
 </body>
 </html>
